--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,16 @@ input {
     margin-top: 10px;
 }
 
+#quoteDisplay{
+  font-style: italic;
+	width:75%;
+	background: #fff;
+	padding:10px;
+	margin:30px auto;
+	text-align: center;
+  height:70px;
+}
+
 /* Slick Nav CSS */
 .slicknav_menu {
     display:none;
