--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 img {
   max-width: 100%;
   height: auto;
-  border: none;
+  border: groove;
 }
 
 .chip {
@@ -206,11 +206,10 @@ z-index: 999;
     padding-bottom: 40px;
 }
 .feature-content-title {
-    padding: 0 20px;
-    text-align: left;
+    text-align: middle;
 }
 .feature-content-description {
-    padding: 0 20px 35px;
+    padding: 10px 20px 35px;
     text-align: left;
     color: #333333;
     margin-top: 15px;
@@ -218,7 +217,7 @@ z-index: 999;
 .feature-content-link {
     border-radius: 5px;
     color: #fff;
-    font-size: 18px;
+    font-size: 14px;
     padding: 10px 30px;
     text-decoration: none;
     text-transform: capitalize;
@@ -285,6 +284,9 @@ div#service-area-main {
 .our-service{
   margin:65px 0px 85px;
 }
+.video1 {
+  align-self: center;
+}
 /*section#services-area {
   background-image: url("../img/bg-2.jpg");
   background-position: center center;
@@ -308,30 +310,31 @@ div#service-area-main {
 #testimornial-area{
   margin: 60px 0;
 }
+
 h2 {
     color: #666666;
 }
 .testimonial-content {
   background-color: #f2f2f2;
   height: 500px;
-  max-width: 260px;
+  max-width: 225px;
   margin: 0 auto 30px;
 }
 .testimonial-content  p {
-    padding: 10px 20px;
+    padding: 20px 10px;
     text-align: left;
 }
 .content-link {
     background: #fff none repeat scroll 0 0;
-    border: 1px solid #cdcdcd;
-    border-radius: 10px;
+    border: 2px solid #cdcdcd;
+    border-radius: 100px;
     color: #666;
     display: inline-block;
-    font-size: 18px;
+    font-size: 15px;
     padding: 10px 30px;
     text-decoration: none;
     text-transform: capitalize;
-    margin-top: 15px;
+    margin-top: 15px
     -webkit-transition: all 0.3s ease;
             transition: all 0.3s ease;
 }
